tests/fixtures/negative/37_return_without_value_failure.yc
fn f() i32 {
    return
}

fn main() {
    f()
}
